@@ -173,6 +173,9 @@ rsvg_marker_render (RsvgMarker *self, gdouble x, gdouble y, gdouble orient, gdou
 
 	rsvg_state_push(ctx);
 	state = rsvg_state_current(ctx);
+
+	rsvg_state_finalize(state);
+	rsvg_state_init(state);
 	
 	for (i = 0; i < 6; i++)
 		{
